# narthex

./: .dockerignore  .env.example  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  entrypoint.sh
.github/workflows/: docker-image.yml
charts/narthex/: Chart.yaml  values.yaml
charts/narthex/templates/: _helpers.tpl  configmap.yaml  hpa.yaml  ingress.yaml  narthex-deployment.yaml  narthex-service.yaml  postgres-service.yaml  postgres-statefulset.yaml  secrets.yaml  serviceaccount.yaml
migrations/: 20260423000000_init.sql
src/: app_state.rs  auth.rs  config.rs  main.rs
src/db/: mod.rs
src/discovery/: handlers.rs  mod.rs  models.rs  service.rs
src/groups/: handlers.rs  mod.rs  models.rs  service.rs
src/labels/: handlers.rs  mod.rs  models.rs  service.rs
src/targets/: handlers.rs  mod.rs  models.rs  service.rs
ui/: README.md  package-lock.json  package.json
ui/src/: app.html  hooks.server.ts
ui/src/lib/: api.ts  clipboard.ts  logger.ts
ui/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  layout.css
ui/src/routes/groups/[id]/: +page.server.ts  +page.svelte
ui/src/routes/login/: +page.server.ts  +page.svelte
ui/src/routes/logout/: +page.server.ts
