[package]
name = "narthex"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }
serde_json = "1.0.149"
envy = "0.4.2"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.102"
tracing = "0.1.44"
tokio = { version = "1.52.1", features = ["full"] }
chrono = { version = "0.4.44", features = ["serde"] }
